Implement navigation for BookDetailsView; update BookDetailsView to use Scaffold and SafeArea; enhance BestSellerListViewItem with tap functionality; replace FeaturedListViewItem with CustomBookImage; add CustomBookDetailsAppBar and CustomBookImage widgets; configure linter rules for better code quality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,3 +81,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+linter:
+  rules:
+    - prefer_const_constructors
+    - prefer_const_literals_to_create_immutables
