--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,12 @@ dependencies:
   go_router: ^15.1.1
   dartz: ^0.10.1
   dio: ^5.8.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  hive_generator: ^2.2.3
+  build_runner: ^2.5.0
   flutter_test:
     sdk: flutter
 
