--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.8.0+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   hive_generator: ^ 2.0.1
