--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_bloc: ^9.1.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   hive_generator: ^ 2.0.1
